--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    box-sizing: border-box;
+*::before,
+*,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
-    min-height: 100vh;
-    margin: 0;
+  min-height: 100vh;
+  margin: 0;
 }
